--- a/static/ajax-solr/templates/bodybody_saved.html
+++ b/static/ajax-solr/templates/bodybody_saved.html
@@ -1,6 +1,6 @@
-<div class="full"> 
+<div class="content"> 
 
-<div style="display: none;" class="userloggedout">
+<div style="display: none;padding:20px" class="userloggedout">
  Please <a class="userlogin" href="#">log in</a> to see your saved items.
 </div>
   
