--- a/static/ajax-solr/templates/pagehead.html
+++ b/static/ajax-solr/templates/pagehead.html
@@ -1,5 +1,11 @@
 <head> 
+<meta charset="utf-8"> 
+    <meta name="description" content=""> 
+    <meta name="author" content=""> 
   <title>{{pagetitle}}</title> 
+    <link rel="stylesheet" type="text/css" href="/bootstrap/bootstrap.css" media="screen" />
+  <link rel="stylesheet" type="text/css" href="{{ staticprefix }}/css/semflow.css" media="screen"/> 
+
  <!--script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script-->
 <script type="text/javascript" src="{{ staticprefix }}/ext/jquery-1.4.2.min.js"></script>
 <!--script type="text/javascript" src="js/jquery.ui.ipad.js"></script-->
@@ -45,7 +51,11 @@
   <!-- add last so we can over-ride other stylesheets -->
   <script type="text/javascript" src="{{ staticprefix }}/js/{{pageclass}}.js"></script> 
   <script type="text/javascript" src="{{ staticprefix }}/js/{{pageclass}}.theme.js"></script>
-  <link rel="stylesheet" type="text/css" href="{{ staticprefix }}/css/semflow.css" media="screen" /> 
 
+    <style type="text/css"> 
+      body {
+        padding-top: 50px;
+      }
+    </style>
 
 </head>
