--- a/static/ajax-solr/templates/pagehead.html
+++ b/static/ajax-solr/templates/pagehead.html
@@ -8,6 +8,8 @@
 
  <!--script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script-->
 <script type="text/javascript" src="{{ staticprefix }}/ext/jquery-1.4.2.min.js"></script>
+  <script type="text/javascript" src="{{ staticprefix }}/js/underscore-min.js"></script>
+  <script type="text/javascript" src="/backbone/backbone.js"></script>
 <!--script type="text/javascript" src="js/jquery.ui.ipad.js"></script-->
  <script type="text/javascript" src="{{ staticprefix }}/js/semflow.core.js"></script> 
  <script type="text/javascript" src="{{ staticprefix }}/ajax-solr/core/Core.js"></script>
@@ -19,7 +21,7 @@
   <script type="text/javascript" src="{{ staticprefix }}/widgets/AstroExplorerStore.js"></script>
   <script type="text/javascript" src="{{ staticprefix }}/ajax-solr/core/AbstractWidget.js"></script>
 {{#haswidgets}}
-  <script type="text/javascript" src="{{ staticprefix }}/widgets/{{ pageclass }}.ResultWidget.js"></script>
+  <script type="text/javascript" src="{{ staticprefix }}/widgets/{{ pageclass }}.ResultsWidgets.js"></script>
 {{/haswidgets}}
   <script type="text/javascript" src="{{ staticprefix }}/ajax-solr/widgets/jquery/PagerWidget.js"></script>
   <script type="text/javascript" src="{{ staticprefix }}/ajax-solr/core/AbstractFacetWidget.js"></script>
@@ -37,7 +39,7 @@
   <script type="text/javascript" src="{{ staticprefix }}/widgets/DateRanger.js"></script>
   <script type="text/javascript" src="{{ staticprefix }}/js/date.js"></script>
   <script type="text/javascript" src="{{ staticprefix }}/js/time.js"></script>
-  <script type="text/javascript" src="{{ staticprefix }}/js/underscore-min.js"></script>
+
  <!--link rel="stylesheet" type="text/css" href="ext/colorbox.css" media="screen" /> 
   <script type="text/javascript" src="ext/jquery.colorbox.js"></script-->
   <script type="text/javascript" src="{{ staticprefix }}/ext/fancybox/jquery.fancybox-1.3.4.pack.js"></script>
@@ -50,7 +52,7 @@
 
   <!-- add last so we can over-ride other stylesheets -->
   <script type="text/javascript" src="{{ staticprefix }}/js/{{pageclass}}.js"></script> 
-  <script type="text/javascript" src="{{ staticprefix }}/js/{{pageclass}}.theme.js"></script>
+  <script type="text/javascript" src="{{ staticprefix }}/js/n.{{pageclass}}.theme.js"></script>
 
     <style type="text/css"> 
       body {
