--- a/static/ajax-solr/css/semflow.css
+++ b/static/ajax-solr/css/semflow.css
@@ -17,7 +17,7 @@ a {
   text-decoration: none;
 }
 
-.content a.save {
+.content a.savelink {
     color: #333;
     border: 1px solid;
     padding-left: 5px;
@@ -26,7 +26,7 @@ a {
     border-radius: 10px;
 }
 
-.content a.delete {
+.content a.deletelink {
     color: #333;
     border: 1px solid;
     padding-left: 5px;
