move config related link creation into configdb.js, create mission_link theme

--- a/static/ajax-solr/templates/pagehead.html
+++ b/static/ajax-solr/templates/pagehead.html
@@ -20,6 +20,7 @@
   <script type="text/javascript" src="{{ staticprefix }}/ajax-solr/core/ParameterHashStore.js"></script>
   <script type="text/javascript" src="{{ staticprefix }}/widgets/AstroExplorerStore.js"></script>
   <script type="text/javascript" src="{{ staticprefix }}/ajax-solr/core/AbstractWidget.js"></script>
+  <script type="text/javascript" src="{{ staticprefix }}/js/configdb.js"></script>
 {{#haswidgets}}
   <script type="text/javascript" src="{{ staticprefix }}/widgets/{{ pageclass }}.ResultsWidgets.js"></script>
 {{/haswidgets}}
