--- a/static/ajax-solr/templates/pagehead.html
+++ b/static/ajax-solr/templates/pagehead.html
@@ -21,6 +21,7 @@
   <script type="text/javascript" src="{{ staticprefix }}/widgets/AstroExplorerStore.js"></script>
   <script type="text/javascript" src="{{ staticprefix }}/ajax-solr/core/AbstractWidget.js"></script>
   <script type="text/javascript" src="{{ staticprefix }}/js/configdb.js"></script>
+  <script type="text/javascript" src="{{ staticprefix }}/js/models.js"></script>
 {{#haswidgets}}
   <script type="text/javascript" src="{{ staticprefix }}/widgets/{{ pageclass }}.ResultsWidgets.js"></script>
 {{/haswidgets}}
