major commit to coffee quite a few widgets and some js. Now we have obsvs in saved page and saved page working but titles are all messed up and everything wants to bibtex. New coffee for the searchwidget dosent work. Not using publications coffee or observations coffee, do that later

--- a/static/ajax-solr/templates/pagehead.html
+++ b/static/ajax-solr/templates/pagehead.html
@@ -11,14 +11,14 @@
   <script type="text/javascript" src="{{ staticprefix }}/js/underscore-min.js"></script>
   <script type="text/javascript" src="{{ staticprefix }}/backbone/backbone.js"></script>
 <!--script type="text/javascript" src="js/jquery.ui.ipad.js"></script-->
- <script type="text/javascript" src="{{ staticprefix }}/js/semflow.core.js"></script> 
+ <script type="text/javascript" src="{{ staticprefix }}/js/semflow.core2.js"></script> 
  <script type="text/javascript" src="{{ staticprefix }}/ajax-solr/core/Core.js"></script>
  <script type="text/javascript" src="{{ staticprefix }}/ajax-solr/core/AbstractManager.js"></script>
   <script type="text/javascript" src="{{ staticprefix }}/ajax-solr/managers/Manager.jquery.js"></script>
   <script type="text/javascript" src="{{ staticprefix }}/ajax-solr/core/Parameter.js"></script>
   <script type="text/javascript" src="{{ staticprefix }}/ajax-solr/core/ParameterStore.js"></script>
   <script type="text/javascript" src="{{ staticprefix }}/ajax-solr/core/ParameterHashStore.js"></script>
-  <script type="text/javascript" src="{{ staticprefix }}/widgets/AstroExplorerStore.js"></script>
+  <script type="text/javascript" src="{{ staticprefix }}/widgets-coffee/AstroExplorerStore.js"></script>
   <script type="text/javascript" src="{{ staticprefix }}/ajax-solr/core/AbstractWidget.js"></script>
   <script type="text/javascript" src="{{ staticprefix }}/js/configdb.js"></script>
   <script type="text/javascript" src="{{ staticprefix }}/js/models.js"></script>
@@ -27,7 +27,7 @@
 {{/haswidgets}}
   <script type="text/javascript" src="{{ staticprefix }}/ajax-solr/widgets/jquery/PagerWidget.js"></script>
   <script type="text/javascript" src="{{ staticprefix }}/ajax-solr/core/AbstractFacetWidget.js"></script>
-  <script type="text/javascript" src="{{ staticprefix }}/widgets/TagcloudWidget.js"></script>
+  <script type="text/javascript" src="{{ staticprefix }}/widgets-coffee/TagcloudWidget.js"></script>
   <script type="text/javascript" src="{{ staticprefix }}/widgets/CurrentSearchWidget.js"></script>
 
   <!--script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/jquery-ui.min.js"></script-->
@@ -35,10 +35,10 @@
   <link rel="stylesheet" type="text/css" href="{{ staticprefix }}/ext/smoothness/jquery-ui.css" media="screen" />
   <link rel="stylesheet" type="text/css" href="{{ staticprefix }}/ext/jquery.autocomplete.css" media="screen" />
   <script type="text/javascript" src="{{ staticprefix }}/ext/jquery.autocomplete.js"></script>
-  <script type="text/javascript" src="{{ staticprefix }}/widgets/AutocompleteWidget.js"></script>
-  <script type="text/javascript" src="{{ staticprefix }}/widgets/DualSlider.js"></script>
-  <script type="text/javascript" src="{{ staticprefix }}/widgets/YearWidget.js"></script>
-  <script type="text/javascript" src="{{ staticprefix }}/widgets/DateRanger.js"></script>
+  <script type="text/javascript" src="{{ staticprefix }}/widgets-coffee/AutocompleteWidget.js"></script>
+  <script type="text/javascript" src="{{ staticprefix }}/widgets-coffee/DualSlider.js"></script>
+  <script type="text/javascript" src="{{ staticprefix }}/widgets-coffee/YearWidget.js"></script>
+  <script type="text/javascript" src="{{ staticprefix }}/widgets-coffee/DateRanger.js"></script>
   <script type="text/javascript" src="{{ staticprefix }}/js/date.js"></script>
   <script type="text/javascript" src="{{ staticprefix }}/js/time.js"></script>
 
