--- a/static/ajax-solr/templates/bodybody_saved.html
+++ b/static/ajax-solr/templates/bodybody_saved.html
@@ -1,135 +1,13 @@
 <div class="content"> 
 
-<div style="display: none;padding:20px" class="userloggedout">
+<div style="display: none;" class="userloggedout">
  Please <a class="userlogin" href="#">log in</a> to see your saved items.
 </div>
   
 <div style="display: none;" class="userloggedin">
-<div class="saved-items">
-  {{#hassearches}}
-  <h1>Saved Searches</h1>
-  <form id="saved-searches-form" action="#">
-<div class="formactions">
-  <input type="button" value="Mark all" onClick="changeAllButtons(this.form, true)">
-  <input type="button" value="Clear all" onClick="changeAllButtons(this.form, false)">
-  <input type="submit" name="action" value="Delete marked">
-  <input type="button" value="Get as BibTex" onClick="getSearchAsBibTex(this.form)">
-  <button type="button" name="myads" value="Send to myADS"
-  onClick="saveSearchToMyADS(this.form)">
-  <img src="/semantic2/alpha/static/images/ADSlabs-button.png" alt="[myADS logo]">
-  </button>
-</div>
-<table class="tablesorter" id="saved-searches-table">
-  <thead>
-    <tr><th/><th>Date saved</th><th>Search terms</th></th>
-    </thead>
-    <tbody>  
-      {{#savedsearches}}
-      <tr class="saveditem" id="search-{{searchctr}}">
-	<td><input type="checkbox" name="searchid" value="{{searchuri}}"></td>
-	<td class="savetime"><span value="{{searchtime}}">{{searchtimestr}}</span></td>
-	<td class="searchtitle"><a href="/semantic2/alpha/explorer/{{searchuri}}">{{searchtext}}</a></td>
-      </tr>
-      {{/savedsearches}}
-    </tbody>
-  </table>
-  </form>
-  {{/hassearches}}
-  {{^hassearches}}
-  <h1>No saved searches</h1>
-  {{/hassearches}}
-</div>
-
-<div class="saved-items">
-  {{#haspubs}}
-  <h1>Saved Publications</h1>
-  <form id="saved-pubs-form" action="#">
-<div class="formactions">  
-  <input type="button" value="Mark all" onClick="changeAllButtons(this.form, true)">
-  <input type="button" value="Clear all" onClick="changeAllButtons(this.form, false)">
-  <input type="submit" name="action" value="Delete marked">
-  <!-- TODO: the current approach forces the bibtex/myADS results to
-  be displayed by fancybox; Doug thinks that this is not ideal
-  since he'd like to be able to have it open in a new tab/window.
-  -->
-  <input type="button" value="Get as BibTex" onClick="getAsBibTex(this.form)">
-  <button type="button" name="myads" value="Send to myADS"
-  onClick="saveToMyADS(this.form)">
-  <img src="/semantic2/alpha/static/images/ADSlabs-button.png" alt="[myADS logo]">
-  </button>
-</div>
-<table class="tablesorter" id="saved-pubs-table">
-  <thead>
-    <tr><th/><th>Date saved</th><th>Title</th><th>Bibcode</th></th>
-    </thead>
-    <tbody>  
-      {{#savedpubs}}
-      <tr class="saveditem" id="pub-{{pubctr}}">
-	<td><input type="checkbox" name="pubid" value="{{{pubid}}}"></td>
-	<!-- should not use non-standard value attribute here -->
-	<td class="savetime"><span value="{{pubtime}}">{{pubtimestr}}</span></td>
-	<td class="papertitle"><a href="/semantic2/alpha/explorer/publications#fq={{linkuri}}&q=*%3A*">{{{linktext}}}</a></td>
-	<td class="bibcode">{{{bibcode}}}</td>
-      </tr>
-      {{/savedpubs}}
-    </tbody>
-  </table>
-  </form>
-  {{/haspubs}}
-  {{^haspubs}}
-  <h1>No saved publications</h1>
-  {{/haspubs}}
-</div>
-
-
-<div class="saved-items">
-  {{#hasobsvs}}
-  <h1>Saved Observations</h1>
-  <form id="saved-obsvs-form" action="#">
-<div class="formactions">  
-  <input type="button" value="Mark all" onClick="changeAllButtons(this.form, true)">
-  <input type="button" value="Clear all" onClick="changeAllButtons(this.form, false)">
-  <input type="submit" name="action" value="Delete marked">
-</div>
-<table class="tablesorter" id="saved-obsvs-table">
-  <thead>
-    <tr><th/><th>Date saved</th><th>Obsid</th><th>Target</th></th>
-    </thead>
-    <tbody>  
-      {{#savedobsvs}}
-      <tr class="saveditem" id="obsv-{{obsvctr}}">
-	<td><input type="checkbox" name="obsvid" value="{{{obsvid}}}"></td>
-	<!-- should not use non-standard value attribute here -->
-	<td class="savetime"><span value="{{obsvtime}}">{{obsvtimestr}}</span></td>
-	<td class="papertitle"><a href="/semantic2/alpha/explorer/observations#fq={{linkuri}}&q=*%3A*">{{{linktext}}}</a></td>
-	<td class="bibcode">{{{target}}}</td>
-      </tr>
-      {{/savedobsvs}}
-    </tbody>
-  </table>
-  </form>
-  {{/hasobsvs}}
-  {{^hasobsvs}}
-  <h1>No saved observations</h1>
-  {{/hasobsvs}}
-</div>
-
-
-
+<div id="saved-searches" class="saved-items"></div>
+<div id="saved-pubs" class="saved-items"></div>
+<div id="saved-obsvs" class="saved-items"></div>
 </div>
     
-	<script type='text/javascript'>
-{{#hassearches}}
-$('#saved-searches-form').submit(submitDeleteAction('/deletesearches', 'searchid'));
-setupSortedTable('#saved-searches-table');
-{{/hassearches}}
-{{#haspubs}}
-$('#saved-pubs-form').submit(submitDeleteAction('/deletepubs', 'pubid'));
- setupSortedTable('#saved-pubs-table');
-{{/haspubs}}
-{{#hasobsvs}}
-$('#saved-obsvs-form').submit(submitDeleteAction('/deleteobsvs', 'obsvid'));
- setupSortedTable('#saved-obsvs-table');
-{{/hasobsvs}}
-	</script>
 </div>
