removed bibtexing and myadsing for searches

--- a/static/ajax-solr/templates/bodybody_saved.html
+++ b/static/ajax-solr/templates/bodybody_saved.html
@@ -13,11 +13,11 @@
   <input type="button" value="Mark all" onClick="changeAllButtons(this.form, true)">
   <input type="button" value="Clear all" onClick="changeAllButtons(this.form, false)">
   <input type="submit" name="action" value="Delete marked">
-  <input type="button" value="Get as BibTex" onClick="getSearchAsBibTex(this.form)">
+  <!--input type="button" value="Get as BibTex" onClick="getSearchAsBibTex(this.form)">
   <button type="button" name="myads" value="Send to myADS"
   onClick="saveSearchToMyADS(this.form)">
   <img src="{{staticprefix}}/images/ADSlabs-button.png" alt="[myADS logo]">
-  </button>
+  </button!-->
 </div>
 <table class="tablesorter" id="saved-searches-table">
   <thead>
