--- a/static/ajax-solr/templates/pagehead.html
+++ b/static/ajax-solr/templates/pagehead.html
@@ -7,11 +7,14 @@
   <link rel="stylesheet" type="text/css" href="{{ staticprefix }}/css/semflow.css" media="screen"/> 
 <script type="text/javascript">
 var dagroup = '{{group}}';
+var dasiteprefix = '{{siteprefix}}';
+var dastaticprefix = '{{staticprefix}}';
 </script>
  <!--script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script-->
 <script type="text/javascript" src="{{ staticprefix }}/ext/jquery-1.4.2.min.js"></script>
   <script type="text/javascript" src="{{ staticprefix }}/js/underscore-min.js"></script>
   <script type="text/javascript" src="{{ staticprefix }}/backbone/backbone.js"></script>
+  <script type="text/javascript" src="{{ staticprefix }}/bootstrap/js/bootstrap-dropdown.js"></script>
 <!--script type="text/javascript" src="js/jquery.ui.ipad.js"></script-->
  <script type="text/javascript" src="{{ staticprefix }}/js/semflow.core2.js"></script> 
  <script type="text/javascript" src="{{ staticprefix }}/ajax-solr/core/Core.js"></script>
