more work on basic user page, painful lessons in jquery selectors

--- a/static/ajax-solr/templates/bodybody_user.html
+++ b/static/ajax-solr/templates/bodybody_user.html
@@ -5,8 +5,8 @@
 </div>
   
 <div style="display: none;" class="userloggedin">
-<div id="pending-invitations" class="saved-items"></div>
-<div id="member-groups" class="saved-items"></div>
+<div id="pending_invitations" class="saved-items"></div>
+<div id="member_groups" class="saved-items"></div>
 <h3>Search Form</h3>
 </div>
     
