support for group ownership, some cosmetics

--- a/static/ajax-solr/templates/bodybody_user.html
+++ b/static/ajax-solr/templates/bodybody_user.html
@@ -5,6 +5,7 @@
 </div>
   
 <div style="display: none;" class="userloggedin">
+<div id="owner_groups" class="saved-items"></div>
 <div id="pending_invitations" class="saved-items"></div>
 <div id="member_groups" class="saved-items"></div>
 <h3>Search Form</h3>
