--- a/static/ajax-solr/templates/pagehead.html
+++ b/static/ajax-solr/templates/pagehead.html
@@ -9,6 +9,7 @@
 var dagroup = '{{group}}';
 var dasiteprefix = '{{siteprefix}}';
 var dastaticprefix = '{{staticprefix}}';
+var mygroups=[];
 </script>
  <!--script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script-->
 <script type="text/javascript" src="{{ staticprefix }}/ext/jquery-1.4.2.min.js"></script>
