--- a/static/ajax-solr/templates/bodybody_observations.html
+++ b/static/ajax-solr/templates/bodybody_observations.html
@@ -1,6 +1,6 @@
 <div class="sidebar"> 
 <div class="well">
-  <h5 style="color:#B4241B">Current Selection</h5> 
+  <h3>Current Selection</h3> 
   <ul id="selection"></ul> 
 
   <h5>Search</h5> 
