--- a/static/ajax-solr/templates/bodybody_publications.html
+++ b/static/ajax-solr/templates/bodybody_publications.html
@@ -2,7 +2,7 @@
 <div class="well">
 
 
-  <h5 style="color:#B4241B">Current Selection</h5> 
+  <h3>Current Selection</h3> 
   <ul id="selection"></ul> 
   <h5>Search</h5> 
   <span id="search_help">(press ESC to close suggestions)</span> 
