--- a/static/ajax-solr/templates/bodybody_user.html
+++ b/static/ajax-solr/templates/bodybody_user.html
@@ -6,7 +6,7 @@
 </div>
   
 <div style="display: none;" class="userloggedin">
-<input type="submit" class="btn small primary" value="Add Group" name="addgroup"/>
+<a type="button" class="btn small primary newgroupfancybox" href="#addgroupdiv">Add Group</a>
 <div id="owner_groups" class="saved-items"></div>	
 <div id="pending_invitations" class="saved-items"></div>
 <div id="member_groups" class="saved-items"></div>
