--- a/static/ajax-solr/templates/bodyhead.html
+++ b/static/ajax-solr/templates/bodyhead.html
@@ -28,7 +28,7 @@
                 <li  class="menu dropdown {{ isitchosengroup }}"> 
                     <a class="dropdown-toggle menu" href="#" id="groups">Groups</a> 
                     <ul id="groupsmenu" class="menu-dropdown"> 
-                        <li><a href="#">New Group</a></li>
+                        <li><a class="newgroupfancybox" href="#addgroupdiv">New Group</a></li>
                         <li class="divider"></li>
                     </ul> 
                 </li>
@@ -49,6 +49,7 @@
             
         </div> 
     </div>
+	<div style="display:none"><div id="addgroupdiv"></div></div>
 </div>
 
 
