buggy weak throwing support, twipsies, some cosmetics. Needs POST implementation of uris

--- a/static/ajax-solr/templates/bodybody_publications.html
+++ b/static/ajax-solr/templates/bodybody_publications.html
@@ -3,13 +3,13 @@
 
 
   <h3>Current Selection</h3> 
-  <ul id="selection"></ul> 
+  <ul id="selection"></ul>
+  <a id="thrower" class="label success" style="display:none">Continue in Observations</a>
   <h5>Search</h5> 
   <span id="search_help">(press ESC to close suggestions)</span> 
   <ul id="search"> 
     <input type="text" id="query" name="query"/> 
   </ul> 
-
   <br/>
  
   <h3>Publication Facets</h3>
@@ -84,10 +84,10 @@
   <div id="exptime"></div>
   <span id="exptime_amount" class="rangevalues"></span>
   
-  <h5>Observation Ids</h5> 
+  <!--h5>Observation Ids</h5> 
   <div class="tagcloud" id="obsids"></div>
 
-    <div class="clear"></div> 
+    <div class="clear"></div--> 
     <br/>
     <br/>
 
