--- a/static/ajax-solr/templates/pagehead.html
+++ b/static/ajax-solr/templates/pagehead.html
@@ -16,6 +16,7 @@ var mygroups=[];
   <script type="text/javascript" src="{{ staticprefix }}/js/underscore-min.js"></script>
   <script type="text/javascript" src="{{ staticprefix }}/backbone/backbone.js"></script>
   <script type="text/javascript" src="{{ staticprefix }}/bootstrap/js/bootstrap-dropdown.js"></script>
+  <script type="text/javascript" src="{{ staticprefix }}/bootstrap/js/bootstrap-twipsy.js"></script>
 <!--script type="text/javascript" src="js/jquery.ui.ipad.js"></script-->
  <script type="text/javascript" src="{{ staticprefix }}/js/semflow.core2.js"></script> 
  <script type="text/javascript" src="{{ staticprefix }}/ajax-solr/core/Core.js"></script>
