--- a/static/ajax-solr/templates/bodybody_observations.html
+++ b/static/ajax-solr/templates/bodybody_observations.html
@@ -3,11 +3,12 @@
   <h3>Current Selection</h3> 
   <ul id="selection"></ul> 
 
+  <a id="thrower" class="label success" style="display:none">Continue in Publications</a>
   <h5>Search</h5> 
   <span id="search_help">(press ESC to close suggestions)</span> 
   <ul id="search"> 
     <input type="text" id="query" name="query"/> 
-  </ul> 
+  </ul>
   <br/>
 
 <h3>Data Facets</h3>
