added sorting, and home page search box. that box needs to take keybord presses of return key

--- a/static/ajax-solr/templates/bodybody_user.html
+++ b/static/ajax-solr/templates/bodybody_user.html
@@ -1,3 +1,28 @@
+<div class="sidebar">
+	<div class="well">
+		<form id="qsearchform" class="form-stacked" action="">
+		<fieldset>
+			<input class="large" id="qtext" type="text"/><br/><br/>
+			<ul class="inputs-list"> 
+               <li> 
+                 <label> 
+                   <input type="radio" checked name="optionsRadios" value="publications" /> 
+                   <span>Publications</span> 
+                 </label> 
+               </li> 
+               <li> 
+                 <label> 
+                   <input type="radio" name="optionsRadios" value="observations" /> 
+                   <span>Observations</span> 
+                 </label> 
+               </li> 
+        	</ul>
+			<br/>
+			<input type="button" class="btn small primary" id="searchsubmit" value="Submit" name="Submit"/>
+		</fieldset>
+		</form>
+	</div>
+</div>
 <div class="content"> 
 <h2> User {{ user }} </h2>
 <hr/>
