--- a/static/ajax-solr/css/semflow.css
+++ b/static/ajax-solr/css/semflow.css
@@ -115,7 +115,8 @@ a.go {
   border-bottom: 1px solid #000;
 }
 #pager,
-#pager-header {
+#pager-header,
+#other-header {
   display: inline;
 }
 #pager li,
@@ -319,4 +320,8 @@ span.facetvalue:nth-child(odd) {
 }
 .container-fluid > .content {
   margin-left: 400px;
+}
+
+a.sorter {
+    font-weight:bold;
 }
